--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         <div class="experience_div"></div>
         <h1 class="experience__section__title" >Experiencia Profesional</h1>
             <div class="experiencie__box">
-                <img class="experience__img" id="juego" src="assets\j.png">
+                <img class="experience__img" id="juego" src="assets\barberia.png">
                 <ul class="experience__info">
                     <li class="experience__title"><h2>Juego del número secreto</h2>
                     <li class="experience__text"><p>Uso de JavaScript</p>
