--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <p class="about__paragraph">El <b>gusto por la tecnología</b> se desarrolló poco tiempo después de iniciar mi carrera universitaria, en este entorno surge el interés por los temas relacionados a la <b>programación y automatización</b>. Tiempo después de ejercer mi carrera profesional como ingeniero y <b>entender de una forma más real y aterrizada las dinámicas de la industria, el comercio y el mercado laboral</b> y sus necesidades retorna esta pasión e inicio de mi nueva etapa formativa.</p>
             <p class="about__paragraph">Bajo el programa de educación denominado <b>ONE - Oracle Next Education</b> inicio mis estudios en mundo del desarrollo en cuál he venido adquiriendo habilidades en diferentes lenguajes como lo son <b>HTML5, CSS3 y JavaScript</b>. Además, del constante mejoramiento de <b>habilidades blandas</b> las cuales también se imparten en el curso.</p>
             <p class="about__paragraph">En este portafolio construido bajo los lineamientos adquiridos en el programa, se podrá encontrar algunas de las aplicaciones desarrolladas durante el proceso formativo. Adicionalmente, hay información personal, la cual puede dar una visión un poco más amplia acerca de mí.</p>
-            <img class="signature" src="assets\firma.jpg">
+            <img class="signature" src="assets\firma_2.png">
         </div>
     </section>
 
@@ -157,7 +157,7 @@
         <div class="experience_div"></div>
         <h1 class="experience__section__title" >Experiencia Profesional</h1>
             <div class="experiencie__box">
-                <img class="experience__img" id="juego" src="assets\barberia.png">
+                <img class="experience__img" id="juego" src="assets\ia.png">
                 <ul class="experience__info">
                     <li class="experience__title"><h2>Juego del número secreto</h2>
                     <li class="experience__text"><p>Uso de JavaScript</p>
